# trsc

./: .env.example  .gitignore  CMakeLists.txt  LICENSE  README.md
include/trsc/AST/: AST.h  ASTContext.h  ASTPrinter.h  ASTVisitor.h  ExprVisitor.h  QualType.h  TypedASTPrinter.h
include/trsc/Basic/: CommandLine.h  Diagnostics.h  SourceLocation.h  SourceManager.h
include/trsc/Lex/: Lexer.h  Token.h
include/trsc/MLIR/: TrscDialect.h  TrscDialect.td  TrscMLIRGen.h  TrscOps.h  TrscOps.td  TrscPasses.h  TrscPasses.td
include/trsc/Parse/: Parser.h
include/trsc/Sema/: BorrowChecker.h  DeclarationCollector.h  NameResolver.h  Scope.h  Sema.h  SymbolTable.h  SymbolTablePrinter.h  TypeChecker.h
lib/: CMakeLists.txt
lib/AST/: AST.cpp  ASTContext.cpp  ASTPrinter.cpp  QualType.cpp  TypedASTPrinter.cpp
lib/Basic/: CommandLine.cpp  Diagnostics.cpp  SourceManager.cpp
lib/Lex/: Lexer.cpp  Token.cpp
lib/MLIR/: CMakeLists.txt
lib/MLIR/IR/: CMakeLists.txt  TrscDialect.cpp  TrscOps.cpp
lib/MLIR/MLIRGen/: CMakeLists.txt  MLIRGen.cpp
lib/MLIR/Transforms/: CMakeLists.txt  Passes.cpp  TrscToStandard.cpp
lib/Parse/: Parser.cpp
lib/Sema/: BorrowChecker.cpp  DeclarationCollector.cpp  NameResolver.cpp  Scope.cpp  Sema.cpp  SymbolTable.cpp  SymbolTablePrinter.cpp  TypeChecker.cpp
test/: CMakeLists.txt
test/Regression/: CMakeLists.txt  lit.cfg.py
test/Regression/Lex/: all_tokens.rs  basic_tokens.rs  comments.rs
test/Regression/Ops/: add_i8.rs
test/Regression/Parse/: complex_structures.rs  control_flow.rs  declarations.rs  simple_fn.rs
test/Regression/Sema/: logical_ops.rs  logical_ops_error.rs  scoping_stress.rs  shadowing.rs  shadowing_simple.rs  symbol_table.rs  type_check.rs  type_mismatch.rs  undeclared_var.rs
test/Unit/: CMakeLists.txt
test/Unit/Lex/: LexerTest.cpp
test/Unit/Sema/: SymbolTableTest.cpp
test/unit/Lex/: LexerTest.cpp
test/unit/Sema/: SymbolTableTest.cpp
tools/: CMakeLists.txt
tools/trsc/: CMakeLists.txt  main.cpp
tools/trsc-opt/: CMakeLists.txt  main.cpp
